# scaling-bio

./: .gitignore  README.md  pyproject.toml  requirements.txt  sys.ipynb
.claude/: settings.local.json
.github/workflows/: deploy.yml  update-data.yml
collectors/: __init__.py  base.py  cellxgene_collector.py  cellxgene_doi_cache.json  genbank_collector.py  pdb_collector.py  registry.py  sra_collector.py  uniprot_collector.py
scripts/: collect_all.py  validate_schema.py
site/: index.html
site/css/: styles.css
site/data/: cellxgene.json  genbank.json  manifest.json  pdb.json  sra.json  uniprot.json
site/js/: app.js  chart.js  counter.js
